--- a/app/views/home/_header.html.erb
+++ b/app/views/home/_header.html.erb
@@ -11,7 +11,7 @@
         </li>
         <% if user_signed_in? %>
         <li class="nav-item">
-          <%= link_to 'Edit Profile', edit_user_registration_path, class: "nav-link active" %>
+          <%= link_to 'Profile', profile_path, class: "nav-link active" %>
         </li>
         <li class="nav-item">
           <%= button_to 'Sign Out', destroy_user_session_path, method: :delete,
