--- a/app/views/home/setting.html.erb
+++ b/app/views/home/setting.html.erb
@@ -1,45 +1,50 @@
-<div class="card mt-2">
-  <h5 class="card-header">Tags</h5>
-  <div class="card-body">
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-    <label class="form-check-label" for="flexCheckDefault">
-        News
-    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-    <label class="form-check-label" for="flexCheckChecked">
-        Sport
-    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-    <label class="form-check-label" for="flexCheckChecked">
-        Art
-    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-    <label class="form-check-label" for="flexCheckChecked">
-        Politic
-    </label>
-    </div>
-    <div class="form-check">
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-    <label class="form-check-label" for="flexCheckChecked">
-        Health
-    </label>
+<div class="container">
+  <div class="card mt-2">
+    <h5 class="card-header">Tags</h5>
+    <div class="card-body">
+      <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+      <label class="form-check-label" for="flexCheckDefault">
+          News
+      </label>
+      </div>
+      <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+          Sport
+      </label>
+      </div>
+      <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+          Art
+      </label>
+      </div>
+      <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+          Politic
+      </label>
+      </div>
+      <div class="form-check">
+      <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+      <label class="form-check-label" for="flexCheckChecked">
+          Health
+      </label>
+      </div>
     </div>
   </div>
-</div>
-<div class="card mt-2">
-  <h5 class="card-header">Duration</h5>
-  <div class="card-body">
+  <div class="card mt-2">
+    <h5 class="card-header">Duration</h5>
+    <div class="card-body">
+    </div>
   </div>
-</div>
-<div class="card mt-2">
-  <h5 class="card-header">Language</h5>
-  <div class="card-body">
+  <div class="card mt-2">
+    <h5 class="card-header">Language</h5>
+    <div class="card-body">
+    </div>
   </div>
+  <% if current_user.admin? %>
+    <%= button_to "Fetch News", fetchnews_path, class: "btn btn-danger mt-2" %>
+  <% end %>
 </div>
