--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
-<div class="row m-2">
+<div class="row" >
+
 <% @all_news.map do |news|%>
-    <div class="card" style="width: 18rem;">
+    <div class="card m-2" style="width: 18rem;">
     <img src=<%= news.image %> class="card-img-top" alt="...">
     <div class="card-body">
         <h5 class="card-title"><%= news.title %></h5>
@@ -9,7 +10,7 @@
     </div>
     </div>
 <% end %>
-<div class="digg_pagination" style="text-align:center;">
+<div class="digg_pagination mt-2" style="text-align:center;">
     <div class="page_info">
       <%= page_entries_info @all_news %>
     </div>
